# lingxigraph-dev-task-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  lingxigraph.json  pyproject.toml  requirements.txt
lingxigraph_dev_task_demo/: __init__.py  graph.py  rules.py  state.py
lingxigraph_dev_task_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lingxigraph_dev_task_demo/graphs/: stage1_pipeline.py  stage2_router.py
tests/: test_stage1_pipeline.py  test_stage2_router.py
