[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lingxigraph_dev_task_demo"
version = "0.1.0"
description = "lingxigraph-dev-task-demo — a LingxiGraph multi-agent deployment"
requires-python = ">=3.11"
dependencies = [
    "lingxigraph[server]>=2.0.1,<3",
]

[tool.setuptools.packages.find]
include = ["lingxigraph_dev_task_demo*"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
